uniq-acad-daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: gs-acad-deployment
spec:
  selector:
    matchLabels:
      webapp: gs-acad-frontend
  template:
    metadata:
      labels:
        webapp: gs-acad-frontend
    spec:
      containers:
        - name: gs-acad-frontend
          image: sdharamkar14/gs-acad:release1
          ports:
            - containerPort: 80
