uniq-acad-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: gs-acad-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gs-acad-web-service
                port: 
                  number: 3000
